# mrs_formation_aquatic_sim

./: LICENSE  README.md
kingfisher_gazebo/: CMakeLists.txt  README.md  package.xml
kingfisher_gazebo/launch/: base_gazebo.launch  drive_to_cmd_vel.launch  multi_base_gazebo.launch  one_base_gazebo.launch
kingfisher_gazebo/rviz/: all_in_one_robot.rviz  all_in_one_robot_nav.rviz  multi_robot_nav.rviz  one_robot_nav.rviz
kingfisher_gazebo/urdf/: base_gazebo.xacro  mod_base_gazebo.xacro
kingfisher_navigation/: CMakeLists.txt  README.md  package.xml
kingfisher_navigation/config/: costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_and_local_planner_params.yaml
kingfisher_navigation/launch/: multi_nav.launch  one_move_base.launch  one_nav.launch
kingfisher_navigation/map/: walls.pgm  walls.xcf  walls_map.yaml
kingfisher_navigation/rviz/: kingfisher_nav_rviz.rviz
mrs_formation_control/: CMakeLists.txt  package.xml
mrs_formation_control/src/: mrs_formation_control.cpp
usv_gazebo_plugins/: README.md
usv_gazebo_plugins/urdf/: mod_usv_gazebo_dynamics_plugin.xacro
